# install-poetry

./: .gitattributes  .pre-commit-config.yaml  LICENSE  README.md  action.yml  assert.sh  bin  main.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/scripts/: assert.sh  get_version.py  install-poetry.py
.github/workflows/: lint.yml  shellcheck.yml  tag_release.yml  test.yml
scripts/: README.md
scripts/v1.1/: main.sh
scripts/v1.2/: main.sh
