[tool.poetry]
name = "install-poetry"
version = "1"  # doesn't matter
description = ""
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no.com>"]
maintainers = ["Jonas Krüger Svensson <jonasks@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
pytest = "^6.1.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
