[tool.poetry]
name = "install-poetry"
version = "1"
description = ""
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
maintainers = ["Jonas Krüger Svensson <jonasks@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
