[tool.poetry]
name = "install-poetry"
version = "1"
description = ""
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
maintainers = ["Jonas Krüger Svensson <jonasks@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
